Ctrlproxy 2.6:
 * Add bind to specific IP only support
 * Fix some bugs in parsing line structs
 * Fix MODE handling
 * Lots of memory leaks fixed
 * Added MOTD support
 * Added quickstart
 * Update example RC file
 * Add repl_simple module
 * Add DETACH command to admin module (Stephane Lacoin)
 * Fix for immediately IDENTIFY'ing when connecting to server
 * Add backwards compatibility module 'repl_memory'
 * Fix for better RFC compliance
 * Fixed bug when crashing on exit
 * Fixed daemon mode
 * Add report_time module
 * Start FAQ
 * Several bugs in log_custom fixed (thanks, igla)
 * Fix build without libssl
 * Add support for building PDF using db2latex
 * Add attribute only_noclient
 * Split repl_memory into linestack_memory and repl_simple
 * Add linestack support
 * Add linestack_file
 * Add linestack_memory
 * Add repl_command
 * Add repl_highlight
 * Add repl_simple
 * Add support for adding new admin commands
 * Added function plugin_loaded()
 * Admin commands can now be executed by /CTRLPROXY
 * Executing admin commands by sending them to the nick 'ctrlproxy' is now
 optional

Ctrlproxy 2.5:
 * Added configuration example for log_custom
 * Fixed log_custom (works correct and with multiple files now!)
 * Fix in personal nick MODE replication
 * Fix bug in ignore_first_nickchange
 * Add DIE command to admin module
 * Correctly handle MODE +o and +v
 * Correctly disconnect from server on exit
 * Only add mode if mode is either @ or + in replication
 * Sockets are now correctly closed when exiting
 * Fix double loading bug in stats module
 * Add ability to ignore first NICK command the user executes
 * Fix daemon mode
 * Print backtrace on crash
 * Fix parsing of MODE +b and -b
 * Add antiflood module
 * Add function to unregister transports
 * Add log_custom module that can be used for logging in a self-defined
 format.
 * Update plugin API to include data pointer that can be used by backend