@@ -1,0 +1,17 @@
+<ctrlproxy:module name="repl_lastdisconnect"
+	xmlns:ctrlproxy="http://ctrlproxy.vernstok.nl/common">
+	<modulemeta>
+		<description>Very lastdisconnect replication</description>
+		<version>0.1</version>
+		<author>Jelmer Vernooij</author>
+		<email>jelmer@vernstok.nl</email>
+		<homepage>http://ctrlproxy.vernstok.nl/</homepage>
+	</modulemeta>
+
+	<description>
+		<para>This module adds very simple replication. All lines that 
+			were sent after the last time you disconnected a client 
+			are stored and sent to a client that connects to ctrlproxy.</para>
+	</description>
+
+</ctrlproxy:module>
